# kt-serial

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  TODO
src/: CMakeLists.txt
src/include/kt-serial/: access.h  base_object.h  kt-serial.h  macros.h
src/include/kt-serial/archives/: binary_istream_archive.h  binary_ostream_archive.h  input_archive.h  output_archive.h
src/include/kt-serial/archives/details/: base_input_archive.h  base_output_archive.h  output_archive_base.h
src/include/kt-serial/details/: basic_traits.h  common.h  common_wrappers.h  error_messages.h  macros.h  serializable_traits.h  singleton.h  traits.h  wrappers.h
src/include/kt-serial/details/wrappers/: base_object_wrapper.h  data_wrapper.h  key_value_wrapper.h  name_value_wrapper.h  pointer_wrapper.h  size_wrapper.h
src/include/kt-serial/types/: common.h  qt.h  std.h
src/include/kt-serial/types/details/: common.h
tests/: CMakeLists.txt  CMakeLists.txt.in  archive_routing.cpp  base_object_serialization.cpp  basic_traits.cpp  binary_ostream_archive.cpp  binary_stream_archives.cpp  handler_count.cpp  input_archive_routing.cpp  output_archive_routing.cpp  q_hash_serialization.cpp  q_linked_list_serialization.cpp  q_list_serialization.cpp  q_map_serialization.cpp  q_multi_hash_serialization.cpp  q_multi_map_serialization.cpp  q_set_serialization.cpp  q_string_serialization.cpp  q_vector_serialization.cpp  serializable_traits.cpp  singleton_test.cpp  std_array_serialization.cpp  std_deque_serialization.cpp  std_forward_list_serialization.cpp  std_list_serialization.cpp  std_map_serialization.cpp  std_pair_serialization.cpp  std_set_serialization.cpp  std_string_serialization.cpp  std_unordered_map_serialization.cpp  std_unordered_set_serialization.cpp  std_vector_serialization.cpp
tests/base_input_archive_routing/: ambiguously_handled.h  load_function_handled.h  load_method_handled.h  serialize_function_handled.h  serialize_method_handled.h
tests/base_output_archive_routing/: ambiguously_handled.h  save_function_handled.h  save_method_handled.h  serialize_function_handled.h  serialize_method_handled.h
tests/handler_count/: ambiguously_deserializable.h  ambiguously_serializable.h  unambiguously_loadable.h  unambiguously_savable.h  unambiguously_savable_loadable.h  unambiguously_serializable.h
tests/serializable_checks/: load_function_checks.h  load_method_checks.h  save_function_checks.h  save_method_checks.h  serialize_function_checks.h  serialize_method_checks.h
tests/test_helpers/: clear.h  clear.hpp  hash.h  hash.hpp  random.h  random.hpp  struct_generator.h  test_functions.h  unordered_specific.h
(+35 files in other folders)
